Fix icon alignment

--- a/Assets/css/content-cleaner.css
+++ b/Assets/css/content-cleaner.css
@@ -443,7 +443,8 @@ td button.list-item-table {
 }
 
 .extra-table-item i.fa-table {
-    line-height: 1.3;
+    line-height: 1.5;
+    padding-top: 2px;
 }
 
 li.list-item i.fa-table {
